--- a/app/src/main/res/layout/activity_landing.xml
+++ b/app/src/main/res/layout/activity_landing.xml
@@ -1,15 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".LandingActivity">
-    <TextView
+   <TextView
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:text="Welcome"
+       android:textSize="20dp"
+       android:layout_centerHorizontal="true"
+       />
+    <EditText
+        android:layout_marginTop="50dp"
+        android:layout_marginHorizontal="30dp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Landing"
-
+        android:layout_height="wrap_content"
+        android:hint="Enter hotel name"
+        android:id="@+id/Hotelname"
+        />
+    <EditText
+        android:layout_below="@id/Hotelname"
+        android:layout_marginHorizontal="30dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Enter hotel Address"
+        android:id="@+id/Hoteladdress"
+        />
+    <EditText
+        android:layout_below="@id/Hoteladdress"
+        android:layout_marginHorizontal="30dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Enter hotel amneties"
+        android:id="@+id/Hotelamneties"
+        />
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="add"
+        android:id="@+id/addBtn"
+        android:layout_below="@id/Hotelamneties"
         />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
