--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -34,7 +34,7 @@
       android:padding="15dp"
       android:background="@drawable/custom_input"
       android:layout_marginHorizontal="30dp"
-      android:inputType="textEmailAddress"
+      android:inputType=""
       android:drawableStart="@drawable/ic_baseline_person_24"
       android:drawablePadding="10dp"
       />
